--- a/Sparkt.BusinessAccess/Sparkt.BusinessAccess.csproj
+++ b/Sparkt.BusinessAccess/Sparkt.BusinessAccess.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>97c26101-be7e-49b2-bfa7-5daf3064bda0</ProjectGuid>
+    <ProjectGuid>{97C26101-BE7E-49B2-BFA7-5DAF3064BDA0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Sparkt.BusinessAccess</RootNamespace>
@@ -30,24 +30,37 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Core\Implementation\ContactUsService.cs" />
+    <Compile Include="Core\Interface\IContactUsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sparkt.DataAccess\Sparkt.DataAccess.csproj">
+      <Project>{35c2b458-a54f-440e-a34d-49b03bfbae51}</Project>
+      <Name>Sparkt.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sparkt.Entities\Sparkt.Entities.csproj">
+      <Project>{4006a23d-2ae9-4511-82c2-7f2bd4406f5f}</Project>
+      <Name>Sparkt.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sparkt.Utility\Sparkt.Utility.csproj">
+      <Project>{b50ef359-dab5-4918-87cf-83c751aaa96e}</Project>
+      <Name>Sparkt.Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
