--- a/Sparkt.Entities/Sparkt.Entities.csproj
+++ b/Sparkt.Entities/Sparkt.Entities.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="CaptchaResponse.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="ContactUs\ContactUs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
