--- a/Sparkt.WebApp/Sparkt.WebApp.csproj
+++ b/Sparkt.WebApp/Sparkt.WebApp.csproj
@@ -50,6 +50,10 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Sparkt.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Sparkt.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -1124,6 +1128,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\User\GoogleCaptcha.js" />
     <Content Include="Scripts\User\SparktHelper.js" />
+    <Content Include="Scripts\User\UserManager.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -1195,6 +1200,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Sparkt.BusinessAccess\Sparkt.BusinessAccess.csproj">
+      <Project>{97C26101-BE7E-49B2-BFA7-5DAF3064BDA0}</Project>
+      <Name>Sparkt.BusinessAccess</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sparkt.Utility\Sparkt.Utility.csproj">
       <Project>{b50ef359-dab5-4918-87cf-83c751aaa96e}</Project>
       <Name>Sparkt.Utility</Name>
