--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -12,9 +12,10 @@
 
     <add key="ReCaptchaSiteKey" value="6LfSVlwUAAAAACV9ETt_U_QhFVTziuCZJiVirM9r" />
     <add key="ReCaptchaSecretKey" value="6LfSVlwUAAAAAF1XqY-JU6P_5mQ65Tiysf8d1LNv" />
+    <add key="ConnectTimeout" value="1000" />
   </appSettings>
   <connectionStrings>
-    <add name="SparktEntities" connectionString="Data Source= Server=tcp:mahindra.database.windows.net; Initial Catalog= MAHINDRA;user id=mahindra;password=M0t0r0la;MultipleActiveResultSets=True; " providerName="System.Data.SqlClient" />
+    <add name="SparktEntities" connectionString="Server=tcp:mahindra.database.windows.net,1433;Data Source=mahindra.database.windows.net;Initial Catalog=Sparkt;Persist Security Info=False;User ID=mahindra;Password=M0t0r0la;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;" />
     <!--<add name="PHFLEntities" connectionString="metadata=res://*/PHFLEntities.csdl|res://*/PHFLEntities.ssdl|res://*/PHFLEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:mahindra.database.windows.net;initial catalog=PHFL;persist security info=True;user id=mahindra;password=M0t0r0la;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <system.web>
@@ -48,7 +49,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
