--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -13,6 +13,14 @@
     <add key="ReCaptchaSiteKey" value="6LfSVlwUAAAAACV9ETt_U_QhFVTziuCZJiVirM9r" />
     <add key="ReCaptchaSecretKey" value="6LfSVlwUAAAAAF1XqY-JU6P_5mQ65Tiysf8d1LNv" />
     <add key="ConnectTimeout" value="1000" />
+
+    <!--SMTP details-->
+    <add key="SMTPServer" value="smtp.mandrillapp.com" />
+    <add key="SMTPPort" value="587" />
+    <add key="SMTPKey" value="Sparkt" />
+    <add key="SMTPPassword" value="0cN-RW5q5LxbhbS9hn0vfQ" />
+    <add key="SMTPMailFrom" value="hello@sparkt.in" />
+    <add key="SMTPDisplayName" value="Sparkt" />
   </appSettings>
   <connectionStrings>
     <add name="SparktEntities" connectionString="Server=tcp:mahindra.database.windows.net,1433;Data Source=mahindra.database.windows.net;Initial Catalog=Sparkt;Persist Security Info=False;User ID=mahindra;Password=M0t0r0la;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;" />
