--- a/Sparkt.WebApp/Sparkt.WebApp.csproj
+++ b/Sparkt.WebApp/Sparkt.WebApp.csproj
@@ -174,6 +174,7 @@
     <Content Include="Content\images\achievements3.jpg" />
     <Content Include="Content\images\achievements4.jpg" />
     <Content Include="Content\images\achievements5.jpg" />
+    <Content Include="Content\images\achievements7.jpg" />
     <Content Include="Content\images\clients\brickex-logo.png" />
     <Content Include="Content\images\clients\editage.png" />
     <Content Include="Content\images\clients\evolis.png" />
@@ -629,6 +630,7 @@
     <Content Include="Content\work\images\banners\pow-cover.jpg" />
     <Content Include="Content\work\images\banners\swp-cover.jpg" />
     <Content Include="Content\work\images\banners\ted-cover.jpg" />
+    <Content Include="Content\work\images\banners\total-banner.gif" />
     <Content Include="Content\work\images\banners\ucypher-cover.jpg" />
     <Content Include="Content\work\images\banners\usports-cover.jpg" />
     <Content Include="Content\work\images\banners\usports-hamnurger-cover.jpg" />
@@ -707,6 +709,7 @@
     <Content Include="Content\work\images\mahindra-nfo-creative-assest3.png" />
     <Content Include="Content\work\images\mahindra-tah-desktop.jpg" />
     <Content Include="Content\work\images\mahindra-tah-mobile.jpg" />
+    <Content Include="Content\work\images\mahindra-textmoji.jpg" />
     <Content Include="Content\work\images\mahindra-unnati-creative-assest1.png" />
     <Content Include="Content\work\images\mahindra-unnati-creative-assest2.png" />
     <Content Include="Content\work\images\mahindra-veo-1.jpg" />
@@ -809,6 +812,7 @@
     <Content Include="Content\work\images\ted-tag7.png" />
     <Content Include="Content\work\images\ted-terence-lewis.jpg" />
     <Content Include="Content\work\images\ted-unapologetic-walking.jpg" />
+    <Content Include="Content\work\images\text-moji-assets.png" />
     <Content Include="Content\work\images\thums\badhat-yojana-thum.jpg" />
     <Content Include="Content\work\images\thums\boutique-thum.jpg" />
     <Content Include="Content\work\images\thums\brickex-thum.jpg" />
@@ -835,11 +839,13 @@
     <Content Include="Content\work\images\thums\swp-thum.jpg" />
     <Content Include="Content\work\images\thums\tah-thum.jpg" />
     <Content Include="Content\work\images\thums\ted-thum.jpg" />
+    <Content Include="Content\work\images\thums\textmoji-thum.jpg" />
     <Content Include="Content\work\images\thums\u-cypher-insta-fight-thum.jpg" />
     <Content Include="Content\work\images\thums\ucypher-thum.jpg" />
     <Content Include="Content\work\images\thums\usports-thum.jpg" />
     <Content Include="Content\work\images\thums\womens-day-thum.jpg" />
     <Content Include="Content\work\images\title-icon.png" />
+    <Content Include="Content\work\images\total-insight.jpg" />
     <Content Include="Content\work\images\u-cypher-akshay-akramaks.jpg" />
     <Content Include="Content\work\images\u-cypher-bg.jpg" />
     <Content Include="Content\work\images\u-cypher-creative-assets-water-flow.png" />
@@ -1209,6 +1215,9 @@
     <Content Include="Views\work\USportsHamburger.cshtml" />
     <Content Include="Views\work\USportsScratch.cshtml" />
     <Content Include="Views\work\WomensDay.cshtml" />
+    <Content Include="Views\work\Total.cshtml" />
+    <Content Include="Views\work\HSPUBHMedia.cshtml" />
+    <Content Include="Views\work\TextMoji.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
