--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -20,7 +20,8 @@
     <add key="SMTPKey" value="Sparkt" />
     <add key="SMTPPassword" value="0cN-RW5q5LxbhbS9hn0vfQ" />
     <add key="SMTPMailFrom" value="hello@sparkt.in" />
-    <add key="SMTPMailTo" value="hello@sparkt.in,sheldon@sparkt.in,shazeb@sparkt.in,pritesh@sparkt.in>" />
+     <!--<add key="SMTPMailTo" value="hello@sparkt.in,sheldon@sparkt.in,shazeb@sparkt.in,pritesh@sparkt.in" />-->
+    <add key="SMTPMailTo" value="vinod@sparkt.in,ramananda@sparkt.in" />
     <add key="SMTPDisplayName" value="Sparkt" />
   </appSettings>
   <connectionStrings>
@@ -33,6 +34,9 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+  <customErrors mode="On">
+      <error statusCode="404" redirect="/" />
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -67,6 +71,246 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+     <rewrite>
+            <rules>
+              <rule name="Redirect t and c" stopProcessing="true">
+                    <match url="index.php" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t1 and c1" stopProcessing="true">
+                    <match url="work/phfl.php" />
+                    <action type="Redirect" url="work/Phfl"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t2 and c2" stopProcessing="true">
+                    <match url="work/swp.php" />
+                    <action type="Redirect" url="work/Swp"  redirectType="Permanent" />
+                </rule>           
+            <rule name="Redirect t3 and c3" stopProcessing="true">
+                    <match url="work/ishqbaaaz.php" />
+                    <action type="Redirect" url="work/IshqBaaaz"  redirectType="Permanent" />
+                </rule>
+               <rule name="Redirect t4 and c4" stopProcessing="true">
+                    <match url="work/made-by-mom.php" />
+                    <action type="Redirect" url="work/MadeByMom"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t5 and c5" stopProcessing="true">
+                    <match url="work/mahindra-mmf.php" />
+                    <action type="Redirect" url="work/MahindraMMF"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t6 and c6" stopProcessing="true">
+                    <match url="work/jungle-book.php" />
+                    <action type="Redirect" url="work/JungleBook"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t7 and c7" stopProcessing="true">
+                    <match url="work/one-plus.php" />
+                    <action type="Redirect" url="work/OnePlus"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t8 and c8" stopProcessing="true">
+                    <match url="work/mahindra-tah.php" />
+                    <action type="Redirect" url="work/MahindraTah"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t9 and c9" stopProcessing="true">
+                    <match url="work/mahindra-badhat-yojana.php" />
+                    <action type="Redirect" url="work/MahindraBadhatYojana"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t10 and c10" stopProcessing="true">
+                    <match url="aboutsparkt/our-team/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t11 and c11" stopProcessing="true">
+                    <match url="work-JungleBook.php" />
+                    <action type="Redirect" url="work/JungleBook"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t12 and c12" stopProcessing="true">
+                    <match url="work-dhoni.php" />
+                    <action type="Redirect" url="work/Dhoni"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t13 and c13" stopProcessing="true">
+                    <match url="aboutsparkt/our-team/pritesh/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t14 and c14" stopProcessing="true">
+                    <match url="/work-phfl.php" />
+                    <action type="Redirect" url="work/Phfl"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t15 and c15" stopProcessing="true">
+                    <match url="/work-mmf.php" />
+                    <action type="Redirect" url="work/MahindraMMF"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t16 and c16" stopProcessing="true">
+                    <match url="/work-oneplus.php" />
+                    <action type="Redirect" url="work/OnePlus"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t17 and c17" stopProcessing="true">
+                    <match url="/work-nayisoch.php" />
+                    <action type="Redirect" url="work/NayiSoch"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t18 and c18" stopProcessing="true">
+                    <match url="/js/ff_" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t19 and c19" stopProcessing="true">
+                     <match url="work-ishqbaaaz.php" />
+                    <action type="Redirect" url="work/IshqBaaaz"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t20 and c20" stopProcessing="true">
+                     <match url="work/dhoni.php" />
+                    <action type="Redirect" url="work/Dhoni"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t21 and c21" stopProcessing="true">
+                     <match url="work/dance-plus-2.php" />
+                    <action type="Redirect" url="work/DancePlus2"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t22 and c22" stopProcessing="true">
+                     <match url="work/nayi-soch.php" />
+                    <action type="Redirect" url="work/NayiSoch"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t23 and c23" stopProcessing="true">
+                     <match url="work/ikyawann.php" />
+                    <action type="Redirect" url="work/Ikyawann"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t24 and c24" stopProcessing="true">
+                     <match url="work/u-cypher.php" />
+                    <action type="Redirect" url="work/UCypher"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t25 and c25" stopProcessing="true">
+                     <match url="css/ff_" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t26 and c26" stopProcessing="true">
+                    <match url="work/ishqbaaaz.php" />
+                    <action type="Redirect" url="work/IshqBaaaz"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t27 and c27" stopProcessing="true">
+                     <match url="work/m-gage.php" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t28 and c28" stopProcessing="true">
+                     <match url="hello-world/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t29 and c29" stopProcessing="true">
+                     <match url="typography/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t30 and c30" stopProcessing="true">
+                     <match url="post-format-quote/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t31 and c31" stopProcessing="true">
+                     <match url="post-without-image/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t32 and c32" stopProcessing="true">
+                     <match url="post-format-link/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t33 and c33" stopProcessing="true">
+                     <match url="aboutsparkt/our-team/shazeb/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t34 and c34" stopProcessing="true">
+                     <match url="tag/gallery/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t35 and c35" stopProcessing="true">
+                     <match url="wp-content/plugins/leaflet-maps-marker/leaflet-kml.php" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t36 and c36" stopProcessing="true">
+                     <match url="aboutsparkt/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t37 and c37" stopProcessing="true">
+                     <match url="about-brooklyn/our-team/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t38 and c38" stopProcessing="true">
+                     <match url="tag/quote/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t39 and c39" stopProcessing="true">
+                     <match url="work/some-of-the-clients-we-work-with/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t40 and c40" stopProcessing="true">
+                     <match url="tag/post-formats/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+               <rule name="Redirect t41 and c41" stopProcessing="true">
+                     <match url="logo1-2/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t42 and c42" stopProcessing="true">
+                     <match url="category/post-formats/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t43 and c43" stopProcessing="true">
+                     <match url="common-elements-2/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t44 and c44" stopProcessing="true">
+                     <match url="work-tah.php" />
+                    <action type="Redirect" url="work/MahindraTah"  redirectType="Permanent" />
+                </rule>
+               <rule name="Redirect t45 and c45" stopProcessing="true">
+                     <match url="work-swp.php" />
+                    <action type="Redirect" url="work/Swp"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t46 and c46" stopProcessing="true">
+                     <match url="work/nach-baliye-8.php" />
+                    <action type="Redirect" url="work/NachBaliye8"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t47 and c47" stopProcessing="true">
+                     <match url="work/pow.php" />
+                    <action type="Redirect" url="work/Pow"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t48 and c48" stopProcessing="true">
+                     <match url="work/mahindra-nfo-launches.php" />
+                    <action type="Redirect" url="work/MahindraNfoLaunches"  redirectType="Permanent" />
+                </rule>
+               <rule name="Redirect t49 and c49" stopProcessing="true">
+                     <match url="work-nach-baliye-8.php" />
+                    <action type="Redirect" url="work/NachBaliye8"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t50 and c50" stopProcessing="true">
+                     <match url="work/bql.php" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>             
+               <rule name="Redirect t51 and c51" stopProcessing="true">
+                     <match url="siddhivinayakgroup/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t52 and c52" stopProcessing="true">
+                     <match url="cNVPn/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t53 and c53" stopProcessing="true">
+                     <match url="clients/brands/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t54 and c54" stopProcessing="true">
+                     <match url="work-mGage.php" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t55 and c55" stopProcessing="true">
+                     <match url="tag/link/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t56 and c56" stopProcessing="true">
+                     <match url="bgWTR/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+               <rule name="Redirect t57 and c57" stopProcessing="true">
+                     <match url="interactive-elements/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t58 and c58" stopProcessing="true">
+                     <match url="background1/" />
+                    <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+              </rules>
+        </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
