--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -273,10 +273,10 @@
                      <match url="work-nach-baliye-8.php" />
                     <action type="Redirect" url="work/NachBaliye8"  redirectType="Permanent" />
                 </rule>
-             <rule name="Redirect t50 and c50" stopProcessing="true">
+             <!--<rule name="Redirect t50 and c50" stopProcessing="true">
                      <match url="work/bql.php" />
                     <action type="Redirect" url="/"  redirectType="Permanent" />
-                </rule>             
+                </rule>-->             
                <rule name="Redirect t51 and c51" stopProcessing="true">
                      <match url="siddhivinayakgroup/" />
                     <action type="Redirect" url="/"  redirectType="Permanent" />
