--- a/Sparkt.WebApp/Sparkt.WebApp.csproj
+++ b/Sparkt.WebApp/Sparkt.WebApp.csproj
@@ -182,18 +182,30 @@
     <Content Include="Content\images\clients\lkp-logo.png" />
     <Content Include="Content\images\clients\m-gage-logo.png" />
     <Content Include="Content\images\clients\mahindra-mf-logo.png" />
+    <Content Include="Content\images\clients\mahindra.png" />
+    <Content Include="Content\images\clients\mgage.png" />
     <Content Include="Content\images\clients\one-plus-logo.png" />
+    <Content Include="Content\images\clients\oneplus.png" />
     <Content Include="Content\images\clients\pedder.png" />
     <Content Include="Content\images\clients\phfl-logo.png" />
+    <Content Include="Content\images\clients\piramal-capital-housing.png" />
+    <Content Include="Content\images\clients\piramal-foundation.png" />
+    <Content Include="Content\images\clients\piramal.png" />
     <Content Include="Content\images\clients\piramalCapital-logo.png" />
     <Content Include="Content\images\clients\piramalRealty-logo.png" />
     <Content Include="Content\images\clients\pro-kabaddi.png" />
     <Content Include="Content\images\clients\rf-india-logo.png" />
     <Content Include="Content\images\clients\star-logo.png" />
     <Content Include="Content\images\clients\star-plus-logo.png" />
+    <Content Include="Content\images\clients\star.png" />
+    <Content Include="Content\images\clients\starplus.png" />
     <Content Include="Content\images\clients\times-network-logo.png" />
+    <Content Include="Content\images\clients\times-network.png" />
+    <Content Include="Content\images\clients\u-dream.png" />
+    <Content Include="Content\images\clients\u-mumba.png" />
     <Content Include="Content\images\clients\uCypher-logo.png" />
     <Content Include="Content\images\clients\uSports-logo.png" />
+    <Content Include="Content\images\clients\usports.png" />
     <Content Include="Content\images\clients\your-brand-here.png" />
     <Content Include="Content\images\communication.png" />
     <Content Include="Content\images\consulting.png" />
@@ -613,6 +625,7 @@
     <Content Include="Content\work\images\banners\instafight-bg.jpg" />
     <Content Include="Content\work\images\banners\ishaqbaaaz-cover.jpg" />
     <Content Include="Content\work\images\banners\jungle-book-cover.jpg" />
+    <Content Include="Content\work\images\banners\khichadi-cover.jpg" />
     <Content Include="Content\work\images\banners\kulfi-cover.jpg" />
     <Content Include="Content\work\images\banners\m-gage-cover.jpg" />
     <Content Include="Content\work\images\banners\mahindra-badhat-yojana-cover.jpg" />
@@ -630,6 +643,7 @@
     <Content Include="Content\work\images\banners\pow-cover.jpg" />
     <Content Include="Content\work\images\banners\swp-cover.jpg" />
     <Content Include="Content\work\images\banners\ted-cover.jpg" />
+    <Content Include="Content\work\images\banners\tgilc-cover.jpg" />
     <Content Include="Content\work\images\banners\total-banner.gif" />
     <Content Include="Content\work\images\banners\ucypher-cover.jpg" />
     <Content Include="Content\work\images\banners\usports-cover.jpg" />
@@ -817,12 +831,14 @@
     <Content Include="Content\work\images\thums\boutique-thum.jpg" />
     <Content Include="Content\work\images\thums\brickex-thum.jpg" />
     <Content Include="Content\work\images\thums\danceplus-thum.jpg" />
+    <Content Include="Content\work\images\thums\hspubh-thum.jpg" />
     <Content Include="Content\work\images\thums\hsubh-thum.jpg" />
     <Content Include="Content\work\images\thums\ikyawann-thum.jpg" />
     <Content Include="Content\work\images\thums\india-rf-thum.jpg" />
     <Content Include="Content\work\images\thums\insta-fight-top.png" />
     <Content Include="Content\work\images\thums\ishqbaaaz-thum.jpg" />
     <Content Include="Content\work\images\thums\junglebook-thum.jpg" />
+    <Content Include="Content\work\images\thums\khichadi-thum.jpg" />
     <Content Include="Content\work\images\thums\kullfi-thum.jpg" />
     <Content Include="Content\work\images\thums\mahindra-unnati-thum.jpg" />
     <Content Include="Content\work\images\thums\mGage-thum.jpg" />
@@ -838,10 +854,14 @@
     <Content Include="Content\work\images\thums\pow-thum.jpg" />
     <Content Include="Content\work\images\thums\swp-thum.jpg" />
     <Content Include="Content\work\images\thums\tah-thum.jpg" />
+    <Content Include="Content\work\images\thums\ted-google-cards-thum.jpg" />
     <Content Include="Content\work\images\thums\ted-thum.jpg" />
     <Content Include="Content\work\images\thums\textmoji-thum.jpg" />
+    <Content Include="Content\work\images\thums\tgilc-thums.jpg" />
     <Content Include="Content\work\images\thums\u-cypher-insta-fight-thum.jpg" />
     <Content Include="Content\work\images\thums\ucypher-thum.jpg" />
+    <Content Include="Content\work\images\thums\usports-hamburger-thum.jpg" />
+    <Content Include="Content\work\images\thums\usports-scratch-thum.jpg" />
     <Content Include="Content\work\images\thums\usports-thum.jpg" />
     <Content Include="Content\work\images\thums\womens-day-thum.jpg" />
     <Content Include="Content\work\images\title-icon.png" />
@@ -860,8 +880,17 @@
     <Content Include="Content\work\images\u-cypher-twitt-4.jpg" />
     <Content Include="Content\work\images\u-cypher-twitt-5.jpg" />
     <Content Include="Content\work\images\ucypher-christmas.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-1.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-2.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-3.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-4.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-5.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-6.jpg" />
+    <Content Include="Content\work\images\ucypher-data-slide-6.png" />
     <Content Include="Content\work\images\ucypher-diwali.jpg" />
     <Content Include="Content\work\images\ucypher-new-year.jpg" />
+    <Content Include="Content\work\images\ucypher-result-1.jpg" />
+    <Content Include="Content\work\images\ucypher-result-2.jpg" />
     <Content Include="Content\work\images\ucypher-vector1.png" />
     <Content Include="Content\work\images\ucypher-vector1a.png" />
     <Content Include="Content\work\images\ucypher-vector1b.png" />
@@ -875,6 +904,7 @@
     <Content Include="Content\work\images\unnati-post2.gif" />
     <Content Include="Content\work\images\usports-creative-asset.png" />
     <Content Include="Content\work\images\usports-desktop.jpg" />
+    <Content Include="Content\work\images\usports-hamburger-phone.png" />
     <Content Include="Content\work\images\usports-mobile.jpg" />
     <Content Include="Content\work\images\usports-scratch-phone.png" />
     <Content Include="Content\work\images\verticle-phone.png" />
@@ -1219,6 +1249,7 @@
     <Content Include="Views\work\HSPUBHMedia.cshtml" />
     <Content Include="Views\work\TextMoji.cshtml" />
     <Content Include="Views\work\UCypherUseOfData.cshtml" />
+    <Content Include="Views\work\UCypherUseOfDataMS.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
