--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -78,12 +78,12 @@
                     <action type="Redirect" url="/"  redirectType="Permanent" />
                 </rule>
              <rule name="Redirect t1 and c1" stopProcessing="true">
-                    <match url="work/phfl.php" />
-                    <action type="Redirect" url="work/Phfl"  redirectType="Permanent" />
+                    <match url="work/Phfl" />
+                    <action type="Redirect" url="work/PiramalHousingFinanceLtd"  redirectType="Permanent" />
                 </rule>
               <rule name="Redirect t2 and c2" stopProcessing="true">
-                    <match url="work/swp.php" />
-                    <action type="Redirect" url="work/Swp"  redirectType="Permanent" />
+                    <match url="work/Swp" />
+                    <action type="Redirect" url="work/StarWritersProgram"  redirectType="Permanent" />
                 </rule>           
             <rule name="Redirect t3 and c3" stopProcessing="true">
                     <match url="work/ishqbaaaz.php" />
@@ -106,8 +106,8 @@
                     <action type="Redirect" url="work/OnePlus"  redirectType="Permanent" />
                 </rule>
              <rule name="Redirect t8 and c8" stopProcessing="true">
-                    <match url="work/mahindra-tah.php" />
-                    <action type="Redirect" url="work/MahindraTah"  redirectType="Permanent" />
+                    <match url="work/MahindraTah" />
+                    <action type="Redirect" url="work/MahindraKarBachatYojana"  redirectType="Permanent" />
                 </rule>
              <rule name="Redirect t9 and c9" stopProcessing="true">
                     <match url="work/mahindra-badhat-yojana.php" />
@@ -308,6 +308,22 @@
              <rule name="Redirect t58 and c58" stopProcessing="true">
                      <match url="background1/" />
                     <action type="Redirect" url="/"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t59 and c59" stopProcessing="true">
+                     <match url="work/TextMoji" />
+                    <action type="Redirect" url="work/MahindraMutualFundTextEmoji"  redirectType="Permanent" />
+                </rule>
+            <rule name="Redirect t60 and c60" stopProcessing="true">
+                     <match url="work/Tgilc" />
+                    <action type="Redirect" url="work/TheGreatIndianLaughterChallenge"  redirectType="Permanent" />
+                </rule>
+              <rule name="Redirect t61 and c61" stopProcessing="true">
+                     <match url="work/HSPubh" />
+                    <action type="Redirect" url="work/HarShaakhPeUlluBaithaaHai"  redirectType="Permanent" />
+                </rule>
+             <rule name="Redirect t62 and c62" stopProcessing="true">
+                     <match url="work/HSPUBHMedia" />
+                    <action type="Redirect" url="work/HarShaakhPeUlluBaithaaHaiMedia"  redirectType="Permanent" />
                 </rule>
               </rules>
         </rewrite>
