Spark UI Changes

--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -95,7 +95,7 @@
                 </rule>
              <rule name="Redirect t5 and c5" stopProcessing="true">
                     <match url="work/mahindra-mmf.php" />
-                    <action type="Redirect" url="work/MahindraMMF"  redirectType="Permanent" />
+                    <action type="Redirect" url="work/MahindraMF"  redirectType="Permanent" />
                 </rule>
               <rule name="Redirect t6 and c6" stopProcessing="true">
                     <match url="work/jungle-book.php" />
@@ -135,7 +135,7 @@
                 </rule>
              <rule name="Redirect t15 and c15" stopProcessing="true">
                     <match url="/work-mmf.php" />
-                    <action type="Redirect" url="work/MahindraMMF"  redirectType="Permanent" />
+                    <action type="Redirect" url="work/MahindraMF"  redirectType="Permanent" />
                 </rule>
             <rule name="Redirect t16 and c16" stopProcessing="true">
                     <match url="/work-oneplus.php" />
